# opensomeip

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.fedora42  Dockerfile.zephyr  README.md  TEST_TRACEABILITY_MATRIX.md  TRACEABILITY_MATRIX.md  TRACEABILITY_SUMMARY.md  docker-compose.dev.yml  docker-compose.zephyr.yml  mkdocs.yml  requirements-dev.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: allure-report.yml  ci.yml  cmake-multi-platform.yml  coverity.yml  freertos.yml  host.yml  pre-commit.yml  preset-validation.yml  publish-requirements.yml  python-tests.yml  requirements-validation.yml  threadx.yml  zephyr.yml
bsp/stm32f407_renode/: CMakeLists.txt  FreeRTOSConfig.h  startup.c  stm32f407_renode.ld  tx_initialize_low_level.c  tx_user.h  uart_retarget.c
cmake/: README.md
cmake/config/lwip/: lwipopts.h
cmake/toolchains/: arm-none-eabi-gcc.cmake  linux-cross-gcc.cmake
docs/: BUILD.md  FREERTOS_PORT.md  INTEGRATION_GUIDE.md  PLATFORM_RISK_REGISTER.md  README.md  THREADX_PORT.md  ZEPHYR_PORT.md  ZEPHYR_PORT_PROGRESS.md  contributing.md  cross-compilation.md  getting-started.md  index.md  project-overview.md  robots.txt  supported-platforms.md
docs/api/: e2e.md  events.md  index.md  rpc.md  sd.md  serialization.md  tp.md
docs/architecture/: e2e_protection.md
docs/diagrams/: core_class_diagram.puml  system_architecture.puml  transport_class_diagram.puml
docs/examples/: index.md
docs/gateways/: architecture.md  contributing.md  dbus.md  dds.md  grpc.md  iceoryx2.md  index.md  mqtt.md  ros2.md  supported-platforms.md  zenoh.md
docs/overrides/: home.html  main.html
docs/requirements/: index.rst
docs/requirements/implementation/: architecture.rst  compatibility.rst  message_header.rst  platform.rst  serialization.rst  service_discovery.rst  transport.rst  transport_protocol.rst
docs/specification/: gap-analysis.md  implementation-report.md  implementation-verification.md  index.md  requirements.md  spec-mapping-report.md  traceability-matrix.md
docs/stylesheets/: extra.css
examples/: CMakeLists.txt
examples/advanced/complex_types/: CMakeLists.txt  server.cpp
examples/advanced/large_messages/: CMakeLists.txt  server.cpp
examples/advanced/multi_service/: CMakeLists.txt  client.cpp  server.cpp
examples/advanced/udp_config/: CMakeLists.txt
examples/basic/events/: CMakeLists.txt  README.md  subscriber.cpp
examples/basic/hello_world/: CMakeLists.txt
examples/basic/method_calls/: CMakeLists.txt  server.cpp
examples/basic/sd_demo/: CMakeLists.txt  client.cpp  server.cpp
examples/e2e_protection/: CMakeLists.txt  basic_e2e.cpp  safety_critical.cpp
examples/renode/freertos_multitask/: CMakeLists.txt  main.cpp
examples/renode/threadx_pool_demo/: CMakeLists.txt  main.cpp
include/common/: result.h
include/core/: session_manager.h
include/e2e/: e2e_crc.h  e2e_header.h  e2e_profile_registry.h
include/platform/: byteorder.h  memory.h  net.h  thread.h
include/platform/freertos/: memory_impl.h  thread_impl.h
include/sd/: sd_message.h  sd_types.h
include/someip/: message.h  types.h
include/tp/: tp_manager.h  tp_reassembler.h  tp_types.h
include/transport/: tcp_transport.h  udp_transport.h
packaging/: opensomeip.spec
renode/: stm32f4_test.resc
scripts/: check_requirement_ids.py  check_spec_requirements.py  check_test_annotations.py  check_traceability_freshness.py  extract_code_requirements.py  extract_someip_rpc_requirements.py  generate_implementation_report.py  generate_requirement_diff.py  generate_traceability_matrix.py  install_dev_tools.sh  prepare_site.sh  run_client_server_test.sh  run_freertos_renode_test.sh  run_pre_pr_tests.ps1  run_pre_pr_tests.sh  run_renode_test.sh  run_sd_demo.sh  run_tests.py  run_threadx_renode_test.sh  run_zephyr_tests.sh  validate_requirements.py  verify_implementation_status.py  zephyr_build.sh  zephyr_to_junit.py
src/: CMakeLists.txt
src/common/: result.cpp
src/core/: session_manager.cpp
src/e2e/: e2e_crc.cpp  e2e_header.cpp  e2e_profile_registry.cpp
src/e2e/e2e_profiles/: standard_profile.cpp
src/events/: event_publisher.cpp  event_subscriber.cpp
src/platform/: zephyr_memory.cpp  zephyr_thread.cpp
src/platform/freertos/: memory.cpp
src/platform/threadx/: memory.cpp
src/rpc/: rpc_client.cpp  rpc_server.cpp
src/sd/: sd_client.cpp  sd_message.cpp  sd_server.cpp
src/serialization/: serializer.cpp
src/someip/: message.cpp  types.cpp
src/tp/: tp_manager.cpp  tp_reassembler.cpp  tp_segmenter.cpp
src/transport/: endpoint.cpp  tcp_transport.cpp  udp_transport.cpp
tests/: 100_PERCENT_COVERAGE_ANALYSIS.md  CMakeLists.txt  README.md  conftest.py  pal_conformance_tests.inc  test_e2e.cpp  test_endpoint.cpp  test_events.cpp  test_message.cpp  test_pal_freertos_mock.cpp  test_pal_threadx_mock.cpp  test_pal_zephyr_mock.cpp  test_platform_threading.cpp  test_rpc.cpp  test_sd.cpp  test_serialization.cpp  test_session_manager.cpp  test_tcp_transport.cpp  test_tp.cpp  test_udp_transport.cpp  winsock_init.cpp
tests/fakes/: memory_impl.h  thread_impl.h
tests/freertos/: CMakeLists.txt  FreeRTOSConfig.h  test_freertos_core.cpp
tests/integration/: test_echo_integration.py
tests/mocks/freertos/: FreeRTOS.h  byteorder_impl.h  net_impl.h  semphr.h  task.h
tests/mocks/threadx/: byteorder_impl.h  net_impl.h  tx_api.h
tests/mocks/zephyr/: byteorder_impl.h  net_impl.h
tests/mocks/zephyr/zephyr/: kernel.h
tests/python/: conftest.py  pytest.ini  requirements.txt  someip_test_framework.py
tests/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
tests/stubs/lwip/lwip/: def.h  inet.h  netdb.h  sockets.h
tests/stubs/threadx/: tx_api.h
tests/system/: test_full_stack_integration.py
tests/threadx/: CMakeLists.txt  test_threadx_core.cpp
zephyr/: CMakeLists.txt  Kconfig  module.yml  prj.conf
zephyr/boards/: mr_canhubk3.conf  native_sim.conf  native_sim_asan.conf
zephyr/renode/: s32k388_renode.repl  s32k388_someip.resc  s32k388_test.resc
(+56 files in other folders)
